Bug 95002 - tiled rendering: images are missing after page switch
Summary: tiled rendering: images are missing after page switch
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2015-10-13 08:20 UTC by Miklos Vajna
Modified: 2016-10-25 19:21 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Android editing reference ODP document (294.22 KB, application/vnd.oasis.opendocument.presentation)
2015-10-13 08:20 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2015-10-13 08:20:25 UTC
Created attachment 119549 [details]
Android editing reference ODP document

1) Open the bugdoc in gtktiledviewer.

2) Switching to the 5th slide -> image is missing.
Comment 1 Commit Notification 2015-10-13 08:49:22 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1631fa9a722553da1ebe0650a65e859862c4405d

tdf#95002 sd tiled rendering: fix handling of images on page switch

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.