tdf#95002 sd tiled rendering: fix handling of images on page switch

It turns out a full invalidation is still needed to trigger the loading
of graphics on the new page, so instead of not invalidating just don't
emit the notification about it during page switch.

Change-Id: Ic99a3d4e268b3db61cf09c78ed0f310c9d365867